# software-repeat-hello-world

./: CMakeLists.txt  README.md  main.c
repeat_hello_world/: CMakeLists.txt  repeat_hello_world.c  repeat_hello_world.h
repeat_hello_world/tests/: CMakeLists.txt  test_repeat_hello_world.cpp
repeat_hello_world/tests/mocks/hello_world/: mock_print_hello_world.c
